commiting changes done in the deployment branch

--- a/src/client/app/index.html
+++ b/src/client/app/index.html
@@ -42,7 +42,7 @@
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
        ga('create', 'UA-56979804-1', 'auto');
-       ga('send', 'pageview');
+       //ga('send', 'pageview');
     </script>
 
     <!--<script type="text/javascript">(function(){var ticker=document.createElement('script');ticker.type='text/javascript';ticker.async=true;ticker.src='//twitcker.com/ticker/beLocalVictoria.js?speed=12&background=fafafa&tweet=8ed41e&open=true&container=own-container&own-container=twitter-feed';(document.getElementsByTagName('head')[0]||document.getElementsByTagName('body')[0]).appendChild(ticker);})();</script>-->
@@ -102,7 +102,7 @@
         <script src="scripts/directives/productDetailsModal.js"></script>
         <script src="scripts/controllers/marketDetails.js"></script>
         <script src="scripts/controllers/manage.js"></script>
-        <script src="scripts/directives/beLocalMap.js"></script>
+        <script src="scripts/directives/belocalmap.js"></script>
         <script src="scripts/controllers/contactus.js"></script>
         <script src="scripts/directives/affix.js"></script>
         <script src="scripts/directives/loginmodal.js"></script>
