Fixed login on small screens.

--- a/src/client/app/scripts/directives/navbar.html
+++ b/src/client/app/scripts/directives/navbar.html
@@ -1,6 +1,4 @@
-<div class="navbar navbar-default" role="navigation">
-
-
+<div class="navbar navbar-default hidden-xs" role="navigation">
 <!-- TOP PART OF NAVBAR -->
   <div class="container-fluid nav-bar-top">
 
@@ -96,5 +94,6 @@
       <div style="clear:both"></div>
     </div>
   </div>
+</div>
 
 <login-modal></login-modal>
