--- a/src/client/app/index.html
+++ b/src/client/app/index.html
@@ -19,12 +19,12 @@
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
-    <link rel="stylesheet" href="bower_components/angular-motion/dist/angular-motion.min.css" />
+    <link rel="stylesheet" href="bower_components/angular-motion/dist/angular-motion.css" />
     <!-- endbower -->
     <!-- endbuild -->
     
     <!--apparently grunt can't inject Jcrop files automatically, so I'm doing it manually -->
-    <link src="bower_components/Jcrop/css/jquery.Jcrop.min.css"
+    <link rel="stylesheet" href="bower_components/Jcrop/css/jquery.Jcrop.min.css">
     <!-- build:css({.tmp,app}) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->   
@@ -79,7 +79,6 @@
     <script src="bower_components/eventie/eventie.js"></script>
     <script src="bower_components/doc-ready/doc-ready.js"></script>
     <script src="bower_components/eventEmitter/EventEmitter.js"></script>
-    <script src="bower_components/jquery-bridget/jquery.bridget.js"></script>
     <script src="bower_components/matches-selector/matches-selector.js"></script>
     <script src="bower_components/outlayer/item.js"></script>
     <script src="bower_components/outlayer/outlayer.js"></script>
