basic framework for the bootstrap tour set up

--- a/src/client/app/index.html
+++ b/src/client/app/index.html
@@ -25,6 +25,8 @@
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->   
     <link rel="icon" type="image/png" href="favicon.png">
+    <link href="bower_components/bootstrap-tour/build/css/bootstrap-tour.min.css" rel="stylesheet">
+
   </head>
   <body>
     <!--[if lt IE 7]>
@@ -81,6 +83,8 @@
     <script src="bower_components/outlayer/outlayer.js"></script>
     <script src="bower_components/masonry/masonry.js"></script>
     <script src="bower_components/angular-ui-utils/ui-utils.js"></script>
+    <script src="bower_components/bootstrap-tour/build/js/bootstrap-tour.min.js"></script>
+    <script src="bower_components/jquery/jquery.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
