--- a/src/client/app/scripts/directives/navbarxs.html
+++ b/src/client/app/scripts/directives/navbarxs.html
@@ -60,7 +60,7 @@
             <li class="dropdown">
               <a class="dropdown-toggle pointer">My Account<span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
-                <li><a class="pointer" ng-click="displayAccountPage()">My Profile</a></li>           
+                <li><a class="pointer" ng-click="displayAccountPage()" id="myProfile">My Profile</a></li>           
                 <li class="divider"></li>
                 <li><a class="pointer" ng-click="AuthService.logout()">Logout</a></li>
               </ul>
