--- a/src/client/app/scripts/directives/navbar.html
+++ b/src/client/app/scripts/directives/navbar.html
@@ -26,7 +26,8 @@
           <li class="dropdown">
             <a class="dropdown-toggle pointer">My Account<span class="caret"></span></a>
             <ul class="dropdown-menu dropdown-menu-right" role="menu">
-              <li><a class="pointer" ng-click="displayAccountPage()">My Profile</a></li>          
+              <li><a class="pointer" ng-click="displayAccountPage()">My Profile</a></li> 
+              <li><a class="pointer" ng-click="showVendorTour()" id="vendorTour">Vendor Tutorial</a></li>         
               <li class="divider"></li>
               <li><a class="pointer" ng-click="AuthService.logout()">Logout</a></li>
             </ul>
