We can now disable buttons on the tour.

--- a/src/client/app/index.html
+++ b/src/client/app/index.html
@@ -20,14 +20,13 @@
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="bower_components/angular-motion/dist/angular-motion.css" />
     <link rel="stylesheet" href="bower_components/bootstrap-tour/build/css/bootstrap-tour.css" />
-    <link rel="stylesheet" href="bower_components/bootstrap-tour/build/css/bootstrap-tour-standalone.css" />
+    <!-- <link rel="stylesheet" href="bower_components/bootstrap-tour/build/css/bootstrap-tour-standalone.css" /> -->
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,app}) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->   
     <link rel="icon" type="image/png" href="favicon.png">
-    <link href="bower_components/bootstrap-tour/build/css/bootstrap-tour.min.css" rel="stylesheet">
 
   </head>
   <body>
@@ -85,7 +84,7 @@
     <script src="bower_components/masonry/masonry.js"></script>
     <script src="bower_components/angular-ui-utils/ui-utils.js"></script>
     <script src="bower_components/bootstrap-tour/build/js/bootstrap-tour.js"></script>
-    <script src="bower_components/bootstrap-tour/build/js/bootstrap-tour-standalone.js"></script>
+    <!--<script src="bower_components/bootstrap-tour/build/js/bootstrap-tour-standalone.js"></script>-->
     <!-- endbower -->
     <!-- endbuild -->
 
