--- a/src/client/app/scripts/directives/navbarxs.html
+++ b/src/client/app/scripts/directives/navbarxs.html
@@ -1,4 +1,4 @@
-<div id="navBarTour" ng-show="showXSNav" class="navbar navbar-xs navbar-fixed-top navbar-default" role="navigation">
+<div ng-show="showXSNav" class="navbar navbar-xs navbar-fixed-top navbar-default" role="navigation">
   <div class="container-fluid nav-padding">
     <div class="navbar-header">
 
