--- a/src/client/app/index.html
+++ b/src/client/app/index.html
@@ -9,10 +9,10 @@
     <title>beLocal</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
-    <link href='http://fonts.googleapis.com/css?family=Bitter' rel='stylesheet' type='text/css'> 
+    <link href='//fonts.googleapis.com/css?family=Bitter' rel='stylesheet' type='text/css'> 
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDzDc-fu8eUovAbBcxn-Z_UKvVNkg4iucc&sensor=false&region=ca"></script>
-    <link href='http://fonts.googleapis.com/css?family=Libre+Baskerville:900,400' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>    
+    <link href='//fonts.googleapis.com/css?family=Libre+Baskerville:900,400' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>    
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">    
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css styles/vendor.css -->
