Fixed masonry once and for all!
It turns out that there’s a nice nifty plugin called images-loaded that
fires an event when images inside a parent container have finished
loading. Using this with masonry (as recommended on the masonry
website…) solves all the problems we were having!

--- a/src/client/app/index.html
+++ b/src/client/app/index.html
@@ -84,6 +84,7 @@
     <script src="bower_components/masonry/masonry.js"></script>
     <script src="bower_components/angular-ui-utils/ui-utils.js"></script>
     <script src="bower_components/bootstrap-tour/build/js/bootstrap-tour.js"></script>
+    <script src="bower_components/imagesloaded/imagesloaded.js"></script>    
     <!--<script src="bower_components/bootstrap-tour/build/js/bootstrap-tour-standalone.js"></script>-->
     <!-- endbower -->
     <!-- endbuild -->   
