--- a/src/client/app/index.html
+++ b/src/client/app/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="bower_components/angular-motion/dist/angular-motion.css" />
     <link rel="stylesheet" href="bower_components/bootstrap-tour/build/css/bootstrap-tour.css" />
-    <!-- <link rel="stylesheet" href="bower_components/bootstrap-tour/build/css/bootstrap-tour-standalone.css" /> -->
+    <link rel="stylesheet" href="bower_components/bootstrap-tour/build/css/bootstrap-tour-standalone.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,app}) styles/main.css -->
@@ -84,8 +84,8 @@
     <script src="bower_components/masonry/masonry.js"></script>
     <script src="bower_components/angular-ui-utils/ui-utils.js"></script>
     <script src="bower_components/bootstrap-tour/build/js/bootstrap-tour.js"></script>
-    <script src="bower_components/imagesloaded/imagesloaded.js"></script>    
-    <!--<script src="bower_components/bootstrap-tour/build/js/bootstrap-tour-standalone.js"></script>-->
+    <script src="bower_components/bootstrap-tour/build/js/bootstrap-tour-standalone.js"></script>
+    <script src="bower_components/imagesloaded/imagesloaded.js"></script>
     <!-- endbower -->
     <!-- endbuild -->   
 
