--- a/src/client/app/scripts/directives/loginmodal.html
+++ b/src/client/app/scripts/directives/loginmodal.html
@@ -58,7 +58,7 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" id="login-modal-close" class="btn btn-default" data-dismiss="modal">Close</button>
                 <button type="submit" ng-click="loginSubmit()" class="btn beLocal-btn-filled">Login Without Facebook</button>
             </div>
         </div>
