--- a/src/client/app/scripts/directives/loginmodal.html
+++ b/src/client/app/scripts/directives/loginmodal.html
@@ -3,7 +3,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                <button type="button" id="login-modal-close" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
                 <h4 class="modal-title">Login<br /><small>Please login with Facebook or enter your username and password.</small></h4>                
             </div>
             <div class="modal-body">  
@@ -58,7 +58,7 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" id="login-modal-close" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                 <button type="submit" ng-click="loginSubmit()" class="btn beLocal-btn-filled">Login Without Facebook</button>
             </div>
         </div>
