Added a few more tests for vendor nav-bar
These ensure that the My Profile, Vendor Tour and Logout buttons work.

--- a/src/client/app/scripts/directives/navbar.html
+++ b/src/client/app/scripts/directives/navbar.html
@@ -24,9 +24,9 @@
       <div ng-show="AuthService.isAuthenticated() && StateService.getUserType() === 'VEN'">
         <ul class="nav navbar-nav navbar-right">
           <li class="dropdown">
-            <a class="dropdown-toggle pointer">My Account<span class="caret"></span></a>
+            <a class="dropdown-toggle pointer" id="vendor-dropdown-toggle">My Account<span class="caret"></span></a>
             <ul class="dropdown-menu dropdown-menu-right" role="menu">
-              <li><a class="pointer" ng-click="displayAccountPage()">My Profile</a></li> 
+              <li><a class="pointer" id="vendor-display-account" ng-click="displayAccountPage()">My Profile</a></li> 
               <li><a class="pointer" ng-click="showVendorTour()" id="vendorTour">Vendor Tutorial</a></li>         
               <li class="divider"></li>
               <li><a class="pointer" ng-click="AuthService.logout()">Logout</a></li>
