--- a/src/client/app/scripts/directives/navbarxs.html
+++ b/src/client/app/scripts/directives/navbarxs.html
@@ -58,12 +58,12 @@
       <div ng-show="AuthService.isAuthenticated() && StateService.getUserType() === 'VEN'">
           <ul class="nav navbar-nav navbar-right">
             <li class="dropdown">
-              <a class="dropdown-toggle pointer">My Account<span class="caret"></span></a>
+              <a class="dropdown-toggle pointer" id="xs-dropdown-toggle">My Account<span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
                 <li><a class="pointer" ng-click="displayAccountPage()" id="myProfile">My Profile</a></li>  
                 <li><a class="pointer" ng-click="showVendorTour()" id="vendorTour">Vendor Tutorial</a></li>         
                 <li class="divider"></li>
-                <li><a class="pointer" ng-click="AuthService.logout()">Logout</a></li>
+                <li><a class="pointer" id="xs-logout" ng-click="AuthService.logout()">Logout</a></li>
               </ul>
             </li>
           </ul>  
