Added vendor tab test cases

--- a/src/client/app/scripts/directives/navbar.html
+++ b/src/client/app/scripts/directives/navbar.html
@@ -82,11 +82,11 @@
             <span class="hidden-sm hidden-xs no-block">In Season Now</span>
             <span class="hidden-md hidden-lg no-block">In Season</span>
           </a></li>
-          <li><a data-target="#vendors" class="pointer" data-toggle="tab" ng-click="setHash('vendors');" id="vendorsTab">
+          <li><a data-target="#vendors" class="pointer pro-vendor-tab" data-toggle="tab" ng-click="setHash('vendors');" id="vendorsTab">
             <span class="hidden-sm hidden-xs no-block">Farmers & Foodmakers</span>
             <span class="hidden-md hidden-lg no-block">Local Producers</span>
           </a></li>
-          <li><a data-target="#markets" class="pointer" data-toggle="tab" ng-click="setHash('markets');" id="marketsTab">
+          <li><a data-target="#markets" class="pointer pro-market-tab" data-toggle="tab" ng-click="setHash('markets');" id="marketsTab">
             <span class="hidden-sm hidden-xs no-block">Local Markets</span>
             <span class="hidden-md hidden-lg no-block">Markets</span>
           </a></li>  
