--- a/src/client/app/scripts/directives/vendorCard.html
+++ b/src/client/app/scripts/directives/vendorCard.html
@@ -11,7 +11,7 @@
       </div>
     </div>
     <div class="col-sm-5">
-      <h4 class="no-bottom-margin no-top-margin"><a class="pointer vendor-card-name" ng-click="displayVendor(vendor.id)">{{vendor.company_name}}</a></h4>
+      <h4 class="no-bottom-margin no-top-margin"><a class="pointer vendor-card-name pro-vendor-name" ng-click="displayVendor(vendor.id)">{{vendor.company_name}}</a></h4>
         <div class="plain-text">
           <a href="tel:{{vendor.phone}}" ng-show="vendor.phone != null">
             <span class="glyphicon glyphicon-earphone"></span> {{vendor.phone}}<br>
@@ -56,7 +56,7 @@
       </div>
     </div>
     <div class="col-xs-5">
-      <h4 class="no-bottom-margin no-top-margin"><a class="pointer vendor-card-name" ng-click="displayVendor(vendor.id)">{{vendor.company_name}}</a></h4>
+      <h4 class="no-bottom-margin no-top-margin"><a class="pointer vendor-card-name pro-vendor-name" ng-click="displayVendor(vendor.id)">{{vendor.company_name}}</a></h4>
         <div class="plain-text">
           <a href="tel:{{vendor.phone}}" ng-show="vendor.phone != null">
             <span class="glyphicon glyphicon-earphone"></span> {{vendor.phone}}<br>
