--- a/src/client/app/scripts/directives/loginmodal.html
+++ b/src/client/app/scripts/directives/loginmodal.html
@@ -18,7 +18,7 @@
                             <div class="col-xs-12 col-md-12">
                                 <div class="form-group" ng-class="{ 'has-error' : loginSubmitted && loginForm.username.$invalid }">
                                     <label for="item-name">Username</label>
-                                    <input required ng-model="loginUsername" type="text" name="username" class="form-control" placeholder="Username" maxlength="40"/>
+                                    <input required ng-model="loginUsername" type="text" name="username" class="form-control" placeholder="Username" maxlength="40" enter-key="loginSubmit()"/>
                                 </div>
                             </div>
                         </div>
@@ -26,7 +26,7 @@
                             <div class="col-xs-12 col-md-12">
                                 <div class="form-group" ng-class="{ 'has-error' : loginSubmitted && loginForm.password.$invalid }">
                                     <label for="item-name">Password</label>
-                                    <input required ng-model="loginPassword" type="password" name="password" class="form-control" placeholder="Password" maxlength="40"/>
+                                    <input required ng-model="loginPassword" type="password" name="password" class="form-control" placeholder="Password" maxlength="40" enter-key="loginSubmit()"/>
                                     <p ng-show="loginErrorMessage != null" class="help-block pull-right" style="padding-top:0px; margin-top: 0px;"><small style="color: #a94442;">{{loginErrorMessage}}</small></p>                                      
                                 </div>                               
                             </div>
