front-end code: infinite scroll for products
- bower install ngInfiniteScroll
- enchanced exception handling for wrong page number
- bug: masonry leaves out an empty space when resetting selection of tags.

--- a/src/client/app/index.html
+++ b/src/client/app/index.html
@@ -89,7 +89,8 @@
     <script src="bower_components/angular-ui-utils/ui-utils.js"></script>
     <script src="bower_components/bootstrap-tour/build/js/bootstrap-tour.js"></script>
     <script src="bower_components/imagesloaded/imagesloaded.js"></script>
-    <script src="bower_components/angular-masonry/angular-masonry.js"></script>     
+    <script src="bower_components/angular-masonry/angular-masonry.js"></script>   
+    <script src='bower_components/ngInfiniteScroll/build/ng-infinite-scroll.js'></script>  
     <!-- endbower -->
     <!-- endbuild -->   
 
