Fixing issues with index.html breaking Masonry.

--- a/src/client/app/index.html
+++ b/src/client/app/index.html
@@ -21,7 +21,6 @@
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="bower_components/angular-motion/dist/angular-motion.min.css" />
     <link rel="stylesheet" href="bower_components/bootstrap-tour/build/css/bootstrap-tour.css" />
-    <link rel="stylesheet" href="bower_components/bootstrap-tour/build/css/bootstrap-tour-standalone.css" />
     <!-- endbower -->
     <!-- endbuild -->
     
@@ -82,13 +81,13 @@
     <script src="bower_components/eventie/eventie.js"></script>
     <script src="bower_components/doc-ready/doc-ready.js"></script>
     <script src="bower_components/eventEmitter/EventEmitter.js"></script>
+    <script src="bower_components/jquery-bridget/jquery.bridget.js"></script>    
     <script src="bower_components/matches-selector/matches-selector.js"></script>
     <script src="bower_components/outlayer/item.js"></script>
     <script src="bower_components/outlayer/outlayer.js"></script>
     <script src="bower_components/masonry/masonry.js"></script>
     <script src="bower_components/angular-ui-utils/ui-utils.js"></script>
     <script src="bower_components/bootstrap-tour/build/js/bootstrap-tour.js"></script>
-    <script src="bower_components/bootstrap-tour/build/js/bootstrap-tour-standalone.js"></script>
     <script src="bower_components/imagesloaded/imagesloaded.js"></script>
     <script src="bower_components/angular-masonry/angular-masonry.js"></script>
     <!-- endbower -->
