Cosmetic changes for market cards

--- a/src/client/app/scripts/directives/navbarxs.html
+++ b/src/client/app/scripts/directives/navbarxs.html
@@ -80,7 +80,7 @@
           <li class="dropdown">
             <a class="dropdown-toggle pointer">My Account<span class="caret"></span></a>
             <ul class="dropdown-menu dropdown-menu-right" role="menu">
-              <li><a class="pointer" ng-click="goToManage()">Manage Vendors</a></li>        
+              <li><a class="pointer" ng-click="goToManage()">Manage Vendors and Markets</a></li>        
               <li class="divider"></li>
               <li><a class="pointer" ng-click="AuthService.logout()">Logout</a></li>
             </ul>
