Started date refactoring
The code is so clean! :D

--- a/src/client/app/index.html
+++ b/src/client/app/index.html
@@ -120,6 +120,7 @@
         <script src="scripts/directives/affix.js"></script>
         <script src="scripts/directives/loginmodal.js"></script>
         <script src="scripts/directives/imgcropped.js"></script>
+        <script src="scripts/services/dateservice.js"></script>        
         <!-- endbuild -->
 </body>
 </html>
