Minor changes to geocoder and navbar

--- a/src/client/app/scripts/directives/navbar.html
+++ b/src/client/app/scripts/directives/navbar.html
@@ -89,7 +89,11 @@
           <li><a data-target="#markets" class="pointer pro-market-tab" data-toggle="tab" ng-click="setHash('markets');" id="marketsTab">
             <span class="hidden-sm hidden-xs no-block">Local Markets</span>
             <span class="hidden-md hidden-lg no-block">Markets</span>
-          </a></li>  
+          </a></li>
+          <li><a href="https://belocalvictoria.me/blog" class="pointer pro-market-tab" id="blog">
+            <span class="hidden-sm hidden-xs no-block">Blog</span>
+            <span class="hidden-md hidden-lg no-block">Blog</span>
+          </a></li>          
         </ul>
       </div>
       <div style="clear:both"></div>
