--- a/src/client/app/scripts/directives/navbarxs.html
+++ b/src/client/app/scripts/directives/navbarxs.html
@@ -51,6 +51,7 @@
           <li ng-class="{active : state.$current.name === 'main'}"><a class="pointer" data-target="#trending" data-toggle="tab" ng-click="setHash('trending');" id="trendingTab">In Season Now</a></li>
           <li><a data-target="#vendors" class="pointer" data-toggle="tab" ng-click="setHash('vendors');" id="vendorsTab">Farmers & Foodmakers</a></li>
           <li><a data-target="#markets" class="pointer" data-toggle="tab" ng-click="setHash('markets');" id="marketsTab">Local Markets</a></li>  
+          <li><a href="https://belocalvictoria.me/blog" class="pointer" id="marketsTab">Blog</a></li>          
         </ul>
       </div>
 
